# openclaw-voice

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  env.example  pyproject.toml
config/: agents.yaml  defaults.yaml
docs/: CHARTER.md  deployment.md  runtime-adapter.md  troubleshooting.md
docs/adr/: 001-standalone-repo.md  002-livekit-for-mvp.md  003-runtime-adapter-seam.md  004-openclaw-is-the-brain.md  005-python-static-frontend.md
docs/plans/: extraction-map.md  phased-implementation-plan.md
docs/research/: decision-summary.md  voice-architecture-study.md
src/openclaw_voice/: __init__.py  __main__.py
src/openclaw_voice/app/: __init__.py  auth.py  config.py  routes.py  server.py
src/openclaw_voice/openclaw/: __init__.py  client.py  instructions.py  llm.py
src/openclaw_voice/providers/: __init__.py
src/openclaw_voice/providers/stt/: __init__.py  whisper.py
src/openclaw_voice/providers/tts/: __init__.py  elevenlabs.py
src/openclaw_voice/runtime/: __init__.py  base.py  registry.py
src/openclaw_voice/runtime/livekit/: __init__.py  worker.py
src/openclaw_voice/web/static/: index.html
tests/: conftest.py  test_auth.py  test_codex_proxy.py  test_config.py  test_gateway.py  test_routes.py  test_runtime_registry.py
tests/_support/: dotenv.py  flask.py  local_pytest_runner.py  pydantic.py  pytest.py  yaml.py
